--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -70,9 +70,11 @@ p {
 .element-todo {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   padding: 10px;
   margin: 0 20px;
   border-bottom: 1px solid grey;
+  margin-right: 15px;
 }
 
 .element-todo:last-child {
@@ -82,6 +84,95 @@ p {
 .remove:hover {
   color: #e63946;
   cursor: pointer;
+}
+
+.command{
+  display: flex;
+  align-items: center;
+}
+
+/* finestra conferma nota */
+
+.flex2{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.flex{
+  display: flex;
+  justify-content: center;
+}
+
+.hidden{
+  display: none;
+}
+
+.back{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 5;
+}
+
+.popup{
+  width: 50%;
+  height: 150px;
+  background-color: #264653;
+  padding: 20px;
+  border-radius: 20px;
+  z-index: 10;
+}
+
+.text{
+  font-size: 20px;
+  margin-bottom: 40px;
+  border-radius: 20px;
+}
+
+.btn-si{
+  background-color: green;
+  flex: auto;
+  font-size: 20px;
+  margin-right: 10px;
+}
+
+.btn-si:hover{
+  background-color: #0bea0b;
+}
+
+.btn-no{
+  background-color: #c81e1e;
+  flex: auto;
+  font-size: 20px;
+  margin-right: 10px;
+}
+
+.btn-no:hover{
+  background-color: #f00;
+}
+
+/* frecce direzione su/giù */
+
+.arrow{
+  display: flex;
+  flex-direction: column;
+  margin-right: 15px;
+}
+
+.fa-caret-up:hover{
+  background-color:  #938181;
+}
+
+.fa-sort-down:hover{
+  background-color:  #938181;
+}
+
+.disabled{
+  opacity:.5;
 }
 
 /* Transizioni */
